some fixes to make the site usable on mobile

--- a/less/roxie-custom.less
+++ b/less/roxie-custom.less
@@ -858,26 +858,26 @@ body .brands.main li a:hover {
 
 /* WIDE MENU */
 
-.yamm-content {
-	padding:20px;
-}
-
-.yamm-content h3 {
-	margin:0 0 20px;
-}
-
-.yamm-content p {
-	margin:0;
-	line-height:24px;
-}
-
-.yamm-content img {
-	margin-bottom:20px;
-}
-
-.yamm-content ul li a:hover {
-	background-color:transparent;
-}
+//.yamm-content {
+//	padding:20px;
+//}
+//
+//.yamm-content h3 {
+//	margin:0 0 20px;
+//}
+//
+//.yamm-content p {
+//	margin:0;
+//	line-height:24px;
+//}
+//
+//.yamm-content img {
+//	margin-bottom:20px;
+//}
+//
+//.yamm-content ul li a:hover {
+//	background-color:transparent;
+//}
 
 /* NAVBAR SHOPPING CART */
 
@@ -4525,7 +4525,7 @@ body .blog-timeline .blog-post:hover .blog-post-info .month {
 		border:0;
 		padding:0;
 		border-radius:0;
-		margin:4px 15px 0;
+		margin:17px 18px;
 		font-size:28px;
 		color:#555555;
 		display: block;
