--- a/less/site.less
+++ b/less/site.less
@@ -15,23 +15,6 @@
     .navbar-nav li.dropdown > a {
         height:74px;
     }
-
-    .yamm-content {
-        padding: 24px 24px 6px 24px;
-
-        h3 {
-            margin: 0 0 18px 0;
-
-            a, a:link, a:active, a:hover, a:visited {
-                color: #555555;
-            }
-        }
-        p {
-            margin: 0 0 18px 0;
-            //text-align: justify;
-        }
-    }
-
 }
 
 ::selection {
